# genai-agent

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: backends.py  core.py  memory.py  tools.py
